Todas Las entidades agregadas

--- a/Test-Tarea/Test-Tarea/Test-Tarea.csproj
+++ b/Test-Tarea/Test-Tarea/Test-Tarea.csproj
@@ -64,12 +64,16 @@
     <Compile Include="Entidades\Estado.cs" />
     <Compile Include="Entidades\Imagen.cs" />
     <Compile Include="Entidades\Marca.cs" />
+    <Compile Include="Entidades\Modelo.cs" />
+    <Compile Include="Entidades\Permiso.cs" />
     <Compile Include="Entidades\Persona.cs" />
     <Compile Include="Entidades\Producto.cs" />
+    <Compile Include="Entidades\Proveedor.cs" />
     <Compile Include="Entidades\TipoComprobante.cs" />
     <Compile Include="Entidades\TipoPersona.cs" />
     <Compile Include="Entidades\UnidadMedida.cs" />
     <Compile Include="Entidades\Usuario.cs" />
+    <Compile Include="Entidades\Usuario_Has_Permiso.cs" />
     <Compile Include="Entidades\Venta.cs" />
     <Compile Include="Entidades\VentaDetalle.cs" />
     <Compile Include="Form1.cs">
