--- a/Test-Tarea/Test-TareaTests2/Test-TareaTests.csproj
+++ b/Test-Tarea/Test-TareaTests2/Test-TareaTests.csproj
@@ -64,6 +64,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Entidades\CargoTests.cs" />
+    <Compile Include="Entidades\CategoriaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
