--- a/Test-Tarea/Test-TareaTests2/Test-TareaTests.csproj
+++ b/Test-Tarea/Test-TareaTests2/Test-TareaTests.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Entidades\CargoTests.cs" />
     <Compile Include="Entidades\CategoriaTests.cs" />
+    <Compile Include="Entidades\ClienteTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
